# blog-automation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: prompts.json  seo_config.json  sources.json
docs/: archive.html  index.html  post.html  settings.html
drafts/: 2026-02-19-backup-topics.json  2026-02-19-navigating-gemini-31-pro-5-key-interpretability-trends.md  2026-02-19-post-image-prompt.txt  2026-02-21-backup-topics.json  2026-02-21-post-image-prompt.txt  2026-02-21-unlock-local-ai-potential-ggmlai-hugging-face-insights.md  2026-02-21-unlocking-local-ais-potential-top-insights-for-2026.md  2026-02-22-backup-topics.json  2026-02-22-discover-how-claws-claude-transform-llm-agents-by-2026.md  2026-02-22-post-image-prompt.txt  2026-02-23-backup-topics.json  2026-02-23-google-ai-restrictions-3-cultural-complexities-to-know.md  2026-02-23-post-image-prompt.txt  2026-02-24-2026-5-ways-selective-chain-of-thought-transforms-ai.md  2026-02-24-backup-topics.json  2026-02-24-post-image-prompt.txt  2026-02-25-2026-guide-optimize-large-language-models-successfully.md  2026-02-25-backup-topics.json  2026-02-25-post-image-prompt.txt  2026-02-26-backup-topics.json  2026-02-26-post-image-prompt.txt  2026-02-26-rethink-online-domains-risks-in-ai-and-data-translation.md  2026-02-27-backup-topics.json  2026-02-27-how-ai-in-finance-is-changing-fast-2026-forecast.md  2026-02-27-post-image-prompt.txt  2026-02-28-backup-topics.json  2026-02-28-exploring-ai-supply-chain-risks-and-financial-innovation.md  2026-02-28-post-image-prompt.txt
(+31 files in other folders)
